[project]
name = "sortingslab"
version = "0.1.0"
description = ""
authors = [
    {name = "KirAPavlov",email = "kirapavlov@mai.education"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer-shell (>=1.0.3,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]

[tool.poetry]
packages = [{include = "sortingslab", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
